@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.5rc2
 
+	- OS X: fixed NumLock mixup, added support for FL_Menu
+	  and FL_Delete keys on external (PC) keyboards
 	- Documentation updates (STR #365, STR #399, STR #412)
 	- Fl_File_Icon::draw() did not support drawing of complex
 	  polygons in icon descriptions (STR #???)
